syntax = "proto3";

option java_multiple_files = true;
option java_package = "red.tetracube.hublounge.errors";
option java_outer_classname = "HubLoungeErrorsProto";

package errors;

message HubLoungeProcessErrorReply {
  ServiceErrorReason reason = 1;
  string description = 2;
}

enum ServiceErrorReason {
  INTERNAL_ERROR = 0;
  CONFLICTS = 1;
  NOT_FOUND = 2;
}